# islands

./: .gitignore  Cargo.toml  README.md  blendscript.py  run-blender  run-image
src/: draw.rs  flow.rs  geometry.rs  lake.rs  layer.rs  log.rs  main.rs  map.rs  obj.rs  river.rs  simplex.rs  valley.rs  vis.rs  water_terrain.rs  wet.rs
src/layer/: mod.rs  vis.rs
