[package]
name = "islands"
version = "0.1.0"
authors = ["Jonas Maier <1.jmaier.3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuss = "0.2.2"
png = "0.16.7"
cgmath = "0.18.0"
rand = "0.8.3"
rayon = "1.5"
num_cpus = "1.13"
